--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 *, *::before, *::after{
     box-sizing: border-box;
-    font-family: Gotham Rounded, sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-weight: normal;
 }
 
@@ -63,4 +63,13 @@ button:hover{
     margin: 10px 10px;
     transform: scale(1);
 
+}
+
+.item{
+    font-size: x-large;
+    font-weight: bold;
+}
+
+.desc{
+    margin: 0px 75px;
 }
